comment out until solved on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@
 #page-contacts .tabs {height:48px; display: flex}
 #page-contacts .tabs div {flex: 1 0 0;text-align: center; padding-top: 14px; color: #4b54ff;background: #f5f5f5;box-shadow: 0 5px 20px 0 rgba(240,240,240,.8);cursor: pointer}
 #page-contacts .tabs div span {border: 0 solid}
-#page-contacts .tabs div:hover {background: #e0e0e0}
+/*#page-contacts .tabs div:hover {background: #e0e0e0}*/
 #page-contacts .tabs div.sel span {border-width:0 0 2px}
 
 #page-contacts ul {list-style-type: none;margin-top:176px;padding: 0}
@@ -35,7 +35,7 @@
     content:'Mute'; padding: 32px 36px; text-transform: uppercase;
     color:#fff; background-color: #4b54ff; margin-left: -120px;position:absolute
 }
-#page-contacts ul li:hover {background: #e0e0e0}
+/*#page-contacts ul li:hover {background: #e0e0e0}*/
 
 #page-chat {padding-top: 61px}
 #page-chat ul {list-style-type: none; padding-left: 0; margin-top: 0}
